k8s/dynamic_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic
  labels:
    app: dynamic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamic
  template:
    metadata:
      labels:
        app: dynamic
    spec:
      containers:
      - image: gcr.io/whim-nks/github.com/netapp/hci-nks-demo:38f6283
        imagePullPolicy: Always
        name: dynamic-demo
        ports:
        - containerPort: 8080
