k8s/static_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
  labels:
    app: static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - image: gcr.io/whim-nks/github.com/netapp/hci-nks-demo:312b291
        name: static-demo
        ports:
        - containerPort: 80
