k8s/dynamic_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamic-service
  labels:
    app: dynamic
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dynamic
  sessionAffinity: None
  type: LoadBalancer
