k8s/static_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  labels:
    app: static
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static
  sessionAffinity: None
  type: LoadBalancer
