k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hmc-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: dynamic-service
          servicePort: 8080
      - path: /static/*
        backend:
          serviceName: static-service
          servicePort: 80
